Add a barrier between sequentially undone commands with setIndex

Some of the commands are undone asynchronously using strokes and the other
are undone directly by simply executing the code in the loop. To avoid
implicit reordering of the commands which undo/redo we should add barriers
between single commands.

BUG:349819